<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/ResultLabel"
                android:text="@string/base_loan" />

            <TextView
                android:id="@+id/base_loan"
                style="@style/ResultText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/ResultLabel"
                android:text="@string/service_charge" />

            <TextView
                android:id="@+id/service_charge"
                style="@style/ResultText" />

        </LinearLayout>

        <View style="@style/Divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/ResultLabel"
                android:text="@string/given_loan" />

            <TextView
                android:id="@+id/given_loan"
                style="@style/ResultText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/ResultLabel"
                android:text="@string/interest" />

            <TextView
                android:id="@+id/interest"
                style="@style/ResultText" />

        </LinearLayout>

        <View style="@style/Divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/ResultLabel"
                android:text="@string/mature_loan" />

            <TextView
                android:id="@+id/mature_loan"
                style="@style/ResultText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/ResultLabel"
                android:text="@string/emi_amount" />

            <TextView
                android:id="@+id/emi_amount"
                android:textSize="30sp"
                style="@style/ResultText" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>